# bare-tiff

./: CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
test/fixtures/: grapefruit.tiff
